test/integration/error/err_05_invalid_heap_op.pl0
program invalidHeap;
procedure p(); begin end;
begin
  new(p, 10); { Error: p is not variable }
end